--- a/css/style.css
+++ b/css/style.css
@@ -374,7 +374,7 @@ body {
     height: 79px;
 }
 
-.footer__license__text {
+.footer__license-text {
     font-size: 16px;
     line-height: 19px;
     color: #FBFBFB;
